--- a/unpackaged/main/default/classes/SOM_testDataFactory.cls
+++ b/unpackaged/main/default/classes/SOM_testDataFactory.cls
@@ -682,13 +682,13 @@ public class SOM_testDataFactory {
         Account account = createAccount('test.user@rimowa.com');
         //Create products
         //Order Product 
-        Product2 product = createProduct('produit 1', '100120102', 'sku1000s1',true);
+        Product2 product = createProduct('produit 1', '10012002', 'sku10001',true);
         listProducts.add(product);
         //Shipping Product 
-        Product2 product2 = createProduct('Standard delivery', 'ProductCode1','sku1000s2',false);
+        Product2 product2 = createProduct('Standard delivery', 'ProductCode1','sku10002',false);
         listProducts.add(product2);
         //Order Product 
-        Product2 product3 = createProduct('produit 23', '100130013', 'sku1000s3',false);
+        Product2 product3 = createProduct('produit 3', '10013003', 'sku10003',false);
         listProducts.add(product3);
         insert listProducts;
         //Get getStandardPricebookId
