--- a/unpackaged/main/default/translations/th.translation-meta.xml
+++ b/unpackaged/main/default/translations/th.translation-meta.xml
@@ -193,6 +193,10 @@
         <name>LABS_AP_Task_Subject_BookingReminder</name>
     </customLabels>
     <customLabels>
+        <label><!-- SFMC IntegrationUser --></label>
+        <name>SFMC_Username</name>
+    </customLabels>
+    <customLabels>
         <label><!-- TargetSalesforce --></label>
         <name>TargetSalesforce</name>
     </customLabels>
