--- a/unpackaged/main/default/translations/it.translation-meta.xml
+++ b/unpackaged/main/default/translations/it.translation-meta.xml
@@ -325,6 +325,10 @@
         <name>Order_Last_Modified_Date_Filter</name>
     </customLabels>
     <customLabels>
+        <label><!-- SFMC IntegrationUser --></label>
+        <name>SFMC_Username</name>
+    </customLabels>
+    <customLabels>
         <label><!-- SOM_Confirmation Resend Transactional Email --></label>
         <name>SOM_Confirmation_Resend_Transactional_Email</name>
     </customLabels>
