Add SFMC Integration User to R360 Flow

--- a/unpackaged/main/default/classes/TNP_001_QueueableCallOut.cls
+++ b/unpackaged/main/default/classes/TNP_001_QueueableCallOut.cls
@@ -41,7 +41,7 @@ public class TNP_001_QueueableCallOut implements Queueable,Database.AllowsCallou
                             JSONGenerated = TNP_002_ServiceClass.GenerateJSON(acc,Label.SFSC_Source,listCountryCode ); //source 'SFSC'     
                         }
                     }
-                    if(user == null ){
+                    if(user == null || user.Name == Label.SFMC_Username ){
                         JSONGenerated = TNP_002_ServiceClass.GenerateJSON(acc,Label.SFDC_Source,listCountryCode ); //source 'SFDC'       
                     }
                 }
