--- a/unpackaged/main/default/classes/TNP_001_QueueableCallOut.cls
+++ b/unpackaged/main/default/classes/TNP_001_QueueableCallOut.cls
@@ -40,8 +40,11 @@ public class TNP_001_QueueableCallOut implements Queueable,Database.AllowsCallou
                         if ( user.Name == Label.SFSC_Integration_User  ){
                             JSONGenerated = TNP_002_ServiceClass.GenerateJSON(acc,Label.SFSC_Source,listCountryCode ); //source 'SFSC'     
                         }
+                        if(user.Name == Label.SFMC_Username) {
+                            JSONGenerated = TNP_002_ServiceClass.GenerateJSON(acc,Label.SFDC_Source,listCountryCode ); //source 'SFDC'   
+                        }
                     }
-                    if(user == null || user.Name == Label.SFMC_Username ){
+                    if(user == null ){
                         JSONGenerated = TNP_002_ServiceClass.GenerateJSON(acc,Label.SFDC_Source,listCountryCode ); //source 'SFDC'       
                     }
                 }
