Commit of Salesforce metadata by Gearset

--- a/unpackaged/main/default/classes/WS_SOM_Create_StoreToWebOrder.cls
+++ b/unpackaged/main/default/classes/WS_SOM_Create_StoreToWebOrder.cls
@@ -76,7 +76,7 @@ global with sharing class WS_SOM_Create_StoreToWebOrder {
                         STWpostalCodeList.add(stw.postalCode__c);
                     }
                     System.debug('OrderDeliveryMethodListIds' + OrderDeliveryMethodListIds);
-                    orderDeliveryMethods = [SELECT ID, ReferenceNumber FROM OrderDeliveryMethod WHERE ID IN :OrderDeliveryMethodListIds];
+                    orderDeliveryMethods = [SELECT ID, ReferenceNumber FROM OrderDeliveryMethod WHERE ID IN :OrderDeliveryMethodListIds OR ReferenceNumber = 'express_DE'];
                     System.debug('orderDeliveryMethods' + orderDeliveryMethods);
                 }
             }else{
@@ -91,15 +91,15 @@ global with sharing class WS_SOM_Create_StoreToWebOrder {
                 }
                 throw new StoreToWebException('We cannot process your request, the following Order Summary Numbers already exist in Salesforce : '+duplicateOrderNumbers);
             }
-            for (StoreToWebOrder storeToWebOrder:request.orders) {
-                if (String.isNotBlank(storeToWebOrder.orderedDate)) {
-                DateTime orderedDateTime = SOM_DateTimeHelper.convertISO8601ToDateTime(storeToWebOrder.orderedDate);
-                DateTime maxAllowedDateTime = DateTime.now().addDays(1);
-                if (orderedDateTime > maxAllowedDateTime) {
-                    throw new StoreToWebException('The OrderedDate cannot exceed today\'s date by more than 24 hours.');
-                }
-            }
-        }
+            
+																	 
+																													
+																		
+														   
+																														
+				 
+			 
+		 
             for (OrderDeliveryMethod odm:orderDeliveryMethods) {
                 orderDeliveryMethodMap.put(odm.ReferenceNumber, odm);
             }
